# mossignal

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  deny.toml  pyproject.toml  rust-toolchain.toml
.beads/: config.yaml  issues.jsonl
crates/mossignal/: Cargo.toml
crates/mossignal/src/: authored.rs  diagnostics.rs  key.rs  lib.rs  metadata.rs  signal.rs  time.rs  validation.rs
docs/: concrete_rust_api_surface.md  exhaustive_diagnostic_code_catalogue.md  index.json  initial_implementation_orientation.md  persistence_canonical_encoding_and_compatibility_spec.md  premium_roadmap.md  processor_and_runtime_architecture.md  signal_value_types_implementation_contract.md  standard_module_catalogue_spec.md  testing_and_verification_policy.md
docs/.index/: api_and_semantics_spec.md  bead_review_implementation_commit_process.md  built_in_node_semantics.md  concrete_rust_api_surface.md  exhaustive_diagnostic_code_catalogue.md  persistence_canonical_encoding_and_compatibility_spec.md  processor_and_runtime_architecture.md  reconfiguration_and_topology_patch_spec.md  standard_module_catalogue_spec.md  testing_and_verification_policy.md
docs/specs/: api_and_semantics_spec.md  bead_review_implementation_commit_process.md  built_in_node_semantics.md  concrete_rust_api_surface.md  exhaustive_diagnostic_code_catalogue.md  reconfiguration_and_topology_patch_spec.md  (+2 more)
scripts/: check_acceptance_record.py  check_static_guardrails.py  contracts.py  generate_docs_index.py  generate_docs_markdown_index.py  run_check.py  test_contracts.py  test_generate_docs_index.py
(+29 files in other folders)
